remove test exclusions for eccles/weaste closure